--- a/_includes/analytics-providers/custom.html
+++ b/_includes/analytics-providers/custom.html
@@ -2,7 +2,9 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics.google.tracking_id }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
+  function gtag() {
+    dataLayer.push(arguments);
+  }
   gtag('js', new Date());
 
   gtag('config', '{{ site.analytics.google.tracking_id }}');
@@ -10,22 +12,26 @@
 
 <!-- Facebook Analytics -->
 <script>
-  window.fbAsyncInit = function () {
+  window.fbAsyncInit = function() {
     FB.init({
       appId: '{{ site.facebook.app_id }}',
       cookie: true,
       xfbml: true,
-      version: 'v3.1'
+      version: 'v3.1',
     });
 
     FB.AppEvents.logPageView();
   };
 
-  (function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) { return; }
-    js = d.createElement(s); js.id = id;
-    js.src = "https://connect.facebook.net/en_US/sdk.js";
+  (function(d, s, id) {
+    var js,
+      fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) {
+      return;
+    }
+    js = d.createElement(s);
+    js.id = id;
+    js.src = 'https://connect.facebook.net/en_US/sdk.js';
     fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
+  })(document, 'script', 'facebook-jssdk');
 </script>
