--- a/_sass/minimal-mistakes/skins/orchid.scss
+++ b/_sass/minimal-mistakes/skins/orchid.scss
@@ -27,7 +27,10 @@ $monospace: 'Space Mono', monospace;
 
 /* Global */
 html {
+  overflow-y: scroll;
+
   font-size: $font-size;
+  font-variant-ligatures: none;
 
   @media (min-width: $small) {
     word-break: keep-all;
@@ -37,6 +40,10 @@ html {
   @media (min-width: $large) {
     font-size: $font-size-large !important;
   }
+}
+
+pre {
+  -webkit-overflow-scrolling: touch;
 }
 
 /* Layout */
@@ -86,6 +93,27 @@ html {
 //     }
 //   }
 // }
+
+.page__content {
+  h2 {
+    font-size: 1.5em;
+  }
+
+  h3 {
+    font-size: 1.25em;
+    padding-bottom: 0.5em;
+  }
+
+  h4 {
+    font-size: 1.1em;
+    padding-bottom: 0.5em;
+  }
+
+  h5,
+  h6 {
+    font-size: 1em;
+  }
+}
 
 /* Comments */
 #custom-comments {
